--- a/assets/scss/bases/_variables.scss
+++ b/assets/scss/bases/_variables.scss
@@ -12,6 +12,7 @@
 // * Z indexs
 // * Breakpoints (Physical width of device screen)
 // * Animation timings
+// * Border width
 // * Border radiuses
 // * Box shadows
 // * Component widths
@@ -185,13 +186,15 @@ $breakpoint-desktop-xl-max: ($breakpoint-desktop-xxl - 1px) !default;
 // ============================================================
 $animation-timing-elastic: cubic-bezier(.835, -.005, .06, 1) !default;
 
+// Border width
+// ============================================================
+$border-width-mn: 1px !default;
+
 // Border radiuses
 // ============================================================
 $border-radius-xs: 3px !default;
 $border-radius-sm: 5px !default;
 $border-radius-lg: 8px !default;
-
-$border-radius-default: 8px !default;
 
 // Box shadows
 // ============================================================
