customize register layout

--- a/assets/scss/components/_background-container.scss
+++ b/assets/scss/components/_background-container.scss
@@ -152,7 +152,7 @@
   // Mixins
   // >>>>>>>>>>>>>>>>>>>>>>>
   @include background-container-variant(
-    $padding: $spacing-sm 0,
+    $padding: $spacing-xs 0,
     $background: none,
     $line-position: static
   );
