--- a/assets/scss/helpers/_utilities.scss
+++ b/assets/scss/helpers/_utilities.scss
@@ -2,7 +2,9 @@
 // ==================================================================================================
 //
 // Utilities
+// * Ellipsis
 // * Word break
+// * Typography
 //
 // ==================================================================================================
 // //////////////////////////////////////////////////////////////////////////////////////////////////
@@ -23,4 +25,12 @@
 // Word
 .is-word-break-word {
   word-break: break-word;
+}
+
+// Typography
+// ============================================================
+// Label form
+.text-label-form {
+  @extend #{$text-style-first-md-bold};
+  color: $color-gray-5;
 }
