customize register finished layout

--- a/assets/scss/components/_background-container.scss
+++ b/assets/scss/components/_background-container.scss
@@ -163,11 +163,13 @@
   // Parent styles
   // >>>>>>>>>>>>>>>>>>>>>>>
   &:before {
-    margin-bottom: $spacing-xs;
+    padding-top: $spacing-md;
+    background-position-y: top;
   }
 
   &:after {
-    margin-top: $spacing-xs;
+    padding-top: $spacing-lg;
+    background-position-y: bottom;
   }
 
   // Child element styles
