--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -47,13 +47,13 @@
   $button-box-shadow: 0 0 0 rgba(0, 0, 0, 0),
 
   // Body hover
-  $button-background-color-hover: $color-gray-2,
+  $button-background-color-hover: $color-orange-4,
   $button-border-width-hover: 0,
   $button-border-color-hover: transparent,
 
   // Text
   $button-text-style: $text-style-first-sm-bold,
-  $button-text-style-small: $text-style-first-xs-bold,
+  $button-text-style-small: $text-style-first-sm-bold,
   $button-text-style-large: $text-style-first-lg-bold,
   $button-text-color: $color-white,
 
