--- a/assets/scss/helpers/_utilities.scss
+++ b/assets/scss/helpers/_utilities.scss
@@ -2,12 +2,19 @@
 // ==================================================================================================
 //
 // Utilities
+// * Width
 // * Ellipsis
 // * Word break
 // * Typography
 //
 // ==================================================================================================
 // //////////////////////////////////////////////////////////////////////////////////////////////////
+
+// Width
+// ============================================================
+.is-fluid {
+  width: 100%;
+}
 
 // Ellipsis
 // ============================================================
