--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -34,6 +34,7 @@
 @import 'components/field';
 @import 'components/panel';
 @import 'components/container';
+@import 'components/modal';
 
 // Collections
 // ============================================================
