create home page

--- a/assets/scss/bases/_variables.scss
+++ b/assets/scss/bases/_variables.scss
@@ -205,13 +205,14 @@ $field-width-default: 250px !default;
 $button-width-default: 150px !default;
 
 $modal-width-default: 340px !default;
-$score-width-default: 132px !default;
+$navigation-button-width: 105px !default;
 
 // Component heights
 // ============================================================
 $field-height-default: 54px !default;
 $button-height-default: 54px !default;
-$score-height-default: 132px !default;
+$topbar-height: 60px !default;
+$navigationbar-height: 74px !default;
 
 $button-height-sm: 45px !default;
 $button-height-md: 54px !default;
