--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -43,6 +43,7 @@
 // Layouts
 // ============================================================
 @import 'layouts/topbar';
+@import 'layouts/navigationbar';
 
 // Pages
 // ============================================================
