create favicons and chnage site title

--- a/assets/scss/bases/_variables.scss
+++ b/assets/scss/bases/_variables.scss
@@ -213,6 +213,7 @@ $field-height-default: 54px !default;
 $button-height-default: 54px !default;
 $topbar-height: 60px !default;
 $navigationbar-height: 74px !default;
+$postbar-height: 84px !default;
 
 $button-height-sm: 45px !default;
 $button-height-md: 54px !default;
