--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -35,6 +35,7 @@
 @import 'components/panel';
 @import 'components/container';
 @import 'components/modal';
+@import 'components/postbar';
 
 // Collections
 // ============================================================
